--- a/config/storage.yml
+++ b/config/storage.yml
@@ -6,6 +6,13 @@ local:
   service: Disk
   root: <%= Rails.root.join("storage") %>
 
+digital_ocean:
+  service: S3
+  access_key_id: <%= ENV.fetch("S3_KEY") %>
+  secret_access_key: <%= ENV.fetch("S3_SECRET") %>
+  region: sgp1
+  bucket: ???
+  endpoint: "https://sgp1.digitaloceanspaces.com"
 # Use rails credentials:edit to set the AWS secrets (as aws:access_key_id|secret_access_key)
 # amazon:
 #   service: S3
