--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,4 @@
-version: '3'
+version: "3"
 services:
   db:
     image: postgres
@@ -8,7 +8,7 @@ services:
     environment:
       POSTGRES_PASSWORD: $PG_PWD
   web:
-    build: 
+    build:
       context: .
       args:
         USER_ID: "${USER_ID:-1000}"
@@ -19,6 +19,8 @@ services:
       - PG_HOST=$PG_HOST
       - PG_USER=$PG_USER
       - PG_PWD=$PG_PWD
+      - S3_KEY=$S3_KEY
+      - S3_SECRET=$S3_SECRET
     command: bash -c "rm -f tmp/pids/server.pid && bundle exec rails s -p 3000 -b '0.0.0.0'"
     volumes:
       - .:/myapp
