--- a/config/storage.yml
+++ b/config/storage.yml
@@ -11,8 +11,14 @@ digital_ocean:
   access_key_id: <%= ENV.fetch("S3_KEY") %>
   secret_access_key: <%= ENV.fetch("S3_SECRET") %>
   region: sgp1
-  bucket: ???
+  # bucket: test-demo
   endpoint: "https://sgp1.digitaloceanspaces.com"
+  
+# digital_ocean:
+#   service: BetterS3
+#   root: <%= Rails.root.join("lib/active_storage/service/better_s3_service") %>
+
+
 # Use rails credentials:edit to set the AWS secrets (as aws:access_key_id|secret_access_key)
 # amazon:
 #   service: S3
