--- a/config/storage.yml
+++ b/config/storage.yml
@@ -8,12 +8,12 @@ local:
 
 digital_ocean:
   service: S3
-  access_key_id: <%= ENV.fetch("S3_KEY") %>
-  secret_access_key: <%= ENV.fetch("S3_SECRET") %>
-  region: sgp1
-  # bucket: test-demo
+  access_key_id: "DTICUU77NLQTBYPSJCIV"
+  secret_access_key: "QRTAvsMGDKYZmzxOWLngUiL2V77lt6kGvrZ+fkdieFY"
+  region: "sgp1"
+  # bucket: "test-demo"
   endpoint: "https://sgp1.digitaloceanspaces.com"
-  
+
 # digital_ocean:
 #   service: BetterS3
 #   root: <%= Rails.root.join("lib/active_storage/service/better_s3_service") %>
