--- a/config/storage.yml
+++ b/config/storage.yml
@@ -14,6 +14,15 @@ digital_ocean:
   # bucket: "test-demo"
   endpoint: "https://sgp1.digitaloceanspaces.com"
 
+spaces:
+  service: BetterS3
+  root: 'qube'
+  access_key_id: <%= ENV.fetch("S3_KEY") %>
+  secret_access_key: <%= ENV.fetch("S3_SECRET") %>
+  region: sgp1
+  bucket: "scout-demo"
+  endpoint: "https://sgp1.digitaloceanspaces.com"
+
 # digital_ocean:
 #   service: BetterS3
 #   root: <%= Rails.root.join("lib/active_storage/service/better_s3_service") %>
